--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width">
 		<title>Barbearia Alura</title>
 		<link rel="stylesheet" href="reset.css">
 		<link rel="stylesheet" href="style.css">
@@ -53,7 +54,7 @@
 					width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 				</div>
 			</section>
-			<section class="beneficios">
+			<section class="beneficios">s
 				<h3 class="titulo-principal">Benefícios</h3>
 
 				<div class="conteudo-beneficios">
@@ -68,7 +69,7 @@
 				</div>
 
 				<div class="video">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=aACt5dtNtClgfsIn" 
+					<iframe width="100%" height="315" src="https://www.youtube.com/embed/wcVVXUV0YUY?si=aACt5dtNtClgfsIn" 
 					title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
 					referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 				</div>
